--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ section {
 
 .about-container {
     /* border: 1px solid blue; */
-    gap: 2rem;
+    gap: 20px;
     margin-bottom: 2rem;
     margin-top: 2rem;
     display: flex;
@@ -287,6 +287,7 @@ section {
 .about-details-container {
     /* border: 1px solid purple; */
     display: flex;
+    gap: 20px;
 }
 
 .about-pic {
